a lot of things added